<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_connection">
        <EditTextPreference
            app:key="phone_server_port"
            app:title="@string/phone_api_port_title"
            app:summary="@string/phone_api_port_summary"
            app:defaultValue="9876"
            android:inputType="number" />

        <Preference
            app:key="pairing_info"
            app:title="@string/pair_desktop_title"
            app:summary="@string/pair_desktop_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_timer">
        <EditTextPreference
            app:key="pomodoro_duration"
            app:title="@string/pomodoro_duration_title"
            app:summary="@string/pomodoro_duration_summary"
            app:defaultValue="25"
            android:inputType="number" />

        <EditTextPreference
            app:key="short_break_duration"
            app:title="@string/short_break_title"
            app:summary="@string/short_break_summary"
            app:defaultValue="5"
            android:inputType="number" />

        <EditTextPreference
            app:key="long_break_duration"
            app:title="@string/long_break_title"
            app:summary="@string/long_break_summary"
            app:defaultValue="15"
            android:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_goals">
        <EditTextPreference
            app:key="daily_goal"
            app:title="@string/daily_goal_title"
            app:summary="@string/daily_goal_summary"
            app:defaultValue="8"
            android:inputType="number" />

        <EditTextPreference
            app:key="day_start_hour"
            app:title="@string/day_start_hour_title"
            app:summary="@string/day_start_hour_summary"
            app:defaultValue="3"
            android:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_notifications">
        <SwitchPreferenceCompat
            app:key="vibrate_enabled"
            app:title="@string/vibrate_title"
            app:summary="@string/vibrate_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="sound_enabled"
            app:title="@string/sound_title"
            app:summary="@string/sound_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_info">
        <Preference
            app:key="about"
            app:title="@string/about_title"
            app:summary="@string/about_summary"
            app:icon="@drawable/ic_info" />
    </PreferenceCategory>

</PreferenceScreen>
